[package]
name = "zzt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }
bevy_ecs_tilemap = "0.9.0"
image = "0.24.5"
serde = "1.0.152"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
